Fix colour blocks spanning more than 1000px being truncated

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 table {
     border: none;
     border-spacing: 0;
+    min-width: max-content;
 }
 td {
     margin: 0;
